Finishing main card

--- a/index.html
+++ b/index.html
@@ -22,15 +22,24 @@
                 <h1 class="title">Cálculo de IMC</h1>
                 <div class="input-wrapper">
                     <label for="weight">Peso (kg)</label>
-                    <input id="weight" type="text">
+                    <input id="weight" type="text" placeholder="Ex. 60">
                 </div>
                 <div class="input-wrapper">
                     <label for="height">Altura (m)</label>
-                    <input id="height" type="text">
+                    <input id="height" type="text" placeholder="Ex. 165">
                 </div>
                 <button type="submit">Calcular IMC <img src="./assets/arrow.svg" alt="Imagem de uma seta"></button>
             </form>
         </main>
+
+        <div class="modal-weapper">
+            <div class="modal card">
+                <button><img src="./assets/close.svg" alt="Botão de fechar"></button>
+                <h2>
+                    Seu imc é: 60
+                </h2>
+            </div>
+        </div>
     </div>
 </body>
 
