--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </form>
         </main>
 
-        <div class="modal-weapper">
+        <div class="modal-weapper open">
             <div class="modal card">
                 <button><img src="./assets/close.svg" alt="Botão de fechar"></button>
                 <h2>
