--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
 <body>
     <div class="container">
+        <div class="alert-error">
+            Digite somente números
+        </div>
+
         <main class="card">
             <form action="">
                 <h1 class="title">Cálculo de IMC</h1>
@@ -32,7 +36,7 @@
             </form>
         </main>
 
-        <div class="modal-weapper open">
+        <div class="modal-weapper ">
             <div class="modal card">
                 <button><img src="./assets/close.svg" alt="Botão de fechar"></button>
                 <h2>
