Estruturando dados modal

--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
                     <input id="weight" type="text" placeholder="Ex. 60">
                 </div>
                 <div class="input-wrapper">
-                    <label for="height">Altura (m)</label>
+                    <label for="height">Altura (cm)</label>
                     <input id="height" type="text" placeholder="Ex. 165">
                 </div>
                 <button type="submit">Calcular IMC <img src="./assets/arrow.svg" alt="Imagem de uma seta"></button>
             </form>
         </main>
 
-        <div class="modal-weapper ">
+        <div class="modal-weapper">
             <div class="modal card">
-                <button><img src="./assets/close.svg" alt="Botão de fechar"></button>
-                <h2>
-                    Seu imc é: 60
+                <h2 class="title">
+                    <button class="close"><img src="./assets/close.svg" alt="Botão de fechar" ></button>
+                    <span>Seu imc é: 60</span>
                 </h2>
             </div>
         </div>
