Modularizando arquivos js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="./script.js" defer></script>
+    <script src="./js/script.js" defer type="module"></script>
 </head>
 
 <body>
