--- a/index.html
+++ b/index.html
@@ -1,50 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
+
+    <!-- preconnect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de IMC</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- styles -->
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
-
+    <!-- scripts-->
     <script src="./js/script.js" defer type="module"></script>
 </head>
-
 <body>
-    <div class="container">
-        <div class="alert-error">
-            Digite somente números
-        </div>
 
+    <div class="alert-error">
+        Digite somente números
+    </div>
+
+    <div class="container">
         <main class="card">
-            <form action="">
+            <form>
                 <h1 class="title">Cálculo de IMC</h1>
                 <div class="input-wrapper">
                     <label for="weight">Peso (kg)</label>
-                    <input id="weight" type="text" placeholder="Ex. 60">
+                    <input 
+                        id="weight" 
+                        type="text"
+                        placeholder="60" />
                 </div>
+
                 <div class="input-wrapper">
                     <label for="height">Altura (cm)</label>
-                    <input id="height" type="text" placeholder="Ex. 165">
+                    <input 
+                        id="height" 
+                        type="text"
+                        placeholder="165" />
                 </div>
-                <button type="submit">Calcular IMC <img src="./assets/arrow.svg" alt="Imagem de uma seta"></button>
+
+                <button type="submit">
+                    Calcular IMC
+                    <img src="./assets/arrow.svg" alt="Seta apontando para direita"> 
+                </button>
             </form>
         </main>
+    </div>
 
-        <div class="modal-weapper">
-            <div class="modal card">
-                <h2 class="title">
-                    <button class="close"><img src="./assets/close.svg" alt="Botão de fechar" ></button>
-                    <span>Seu imc é: 60</span>
-                </h2>
-            </div>
+    <div class="modal-wrapper">
+        <div class="modal card">
+            <h2 class="title">
+
+                <button class="close">
+                    <img src="./assets/close.svg" alt="imagem para fechar o popup">
+                </button>
+
+                <span>Seu IMC é de 28</span>
+            </h2>
         </div>
     </div>
-</body>
 
+</body>
 </html>
